# UnleashedRecomp-NX

./: .gitignore  CMakeLists.txt
UnleashedRecomp/: CMakeLists.txt  app.cpp  exports.cpp  main.cpp  mutex.h  stdafx.h
UnleashedRecomp/apu/: audio.h  embedded_player.cpp
UnleashedRecomp/apu/driver/: sdl2_driver.cpp
UnleashedRecomp/cpu/: guest_thread.cpp  guest_thread.h
UnleashedRecomp/gpu/: video.cpp  video.h
UnleashedRecomp/hid/driver/: switch_hid.cpp
UnleashedRecomp/install/: installer.cpp  update_checker.cpp
UnleashedRecomp/kernel/: heap.cpp  heap.h  imports.cpp  memory.cpp  memory.h  xam.cpp  xdm.cpp  xdm.h
UnleashedRecomp/kernel/io/: file_system.cpp
UnleashedRecomp/os/: logger.h  registry.h  switch_atomic_wait.h
UnleashedRecomp/os/switch/: logger_switch.cpp  media_switch.cpp  nfd_switch_stub.cpp  process_switch.cpp  registry_switch.ini  registry_switch.inl  runtime_switch.cpp  user_switch.cpp  version_switch.cpp
UnleashedRecomp/patches/: aspect_ratio_patches.cpp  misc_patches.cpp  video_patches.cpp
UnleashedRecomp/res/: version.txt
UnleashedRecomp/res/win32/: res.rc.template
UnleashedRecomp/ui/: game_window.cpp  installer_wizard.cpp  message_window.cpp
UnleashedRecomp/user/: config.cpp  paths.cpp
UnleashedRecompLib/: CMakeLists.txt
patches/: XenonRecomp.patch  XenosRecomp.patch  concurrentqueue.patch  imgui.patch  implot.patch  plume.patch  volk.patch
toolchains/: switch-devkitA64.cmake
tools/: build-switch-nro.sh  build-switch-plume.sh  generate-switch-app-shaders.sh
